--- a/main.html
+++ b/main.html
@@ -77,6 +77,10 @@
         "goguardian": {
           name: "Goguardian",
           url: "chrome-extension://haldlgldplgnggkjaafhelgiaglafanh/youtube_injection.js"
+          },
+        "SafeDoc": {
+          name: "SafeDoc",
+          url: "chrome-extension://mmhppocgfdombmapajfeafhecobfcjpk/manifest.json"
         },
         "lanschool": {
           name: "LANSchool",
