--- a/main.html
+++ b/main.html
@@ -80,7 +80,7 @@
           },
         "SafeDoc": {
           name: "SafeDoc",
-          url: "chrome-extension://mmhppocgfdombmapajfeafhecobfcjpk/manifest.json"
+          url: "chrome-extension://mmhppocgfdombmapajfeafhecobfcjpk/img/Logo-128x128.png"
         },
         "lanschool": {
           name: "LANSchool",
